prometheuschart/ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"prometheus-ingress","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"prometheus-kubequest.duckdns.org","http":{"paths":[{"backend":{"service":{"name":"prometheus-kube-prometheus-prometheus","port":{"number":9090}}},"path":"/","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2025-06-18T19:05:23Z"
  generation: 3
  name: prometheus-ingress
  namespace: monitoring
  resourceVersion: "1014523"
  uid: 11590803-979c-400b-a102-10c025501ffb
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus-kubequest.duckdns.org
    http:
      paths:
      - backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.0.1.241
